add source variable bindings and merge applied ranges for variable values